--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ Personal Portfolio for Li Li Htwe ("a htwe")
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
                          <a href="images/lili-2.png" class="image-popup">
-                              <img src="../images/lili-2.png" class="img-responsive" alt="Hospitality">
+                              <img src="./images/lili-2.png" class="img-responsive" alt="Hospitality">
                          </a>
                     </div>
                     <h4>Hospitality</h4>
